src/objects/AcctSeed__Expense_Report__c.object
<CustomObject>
    <description>Used to document expenses incurred by an employee.</description>
    <fields>
        <fullName>AcctSeed__Billable_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which can be billed.</inlineHelpText>
        <label>Billable Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billed_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which have been billed.</inlineHelpText>
        <label>Billed Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Billed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <inlineHelpText>Number of expense lines associated with this record.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Paid_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which have been paid to either an employee or credit card vendor.</inlineHelpText>
        <label>Paid Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Vendor_Employee_Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payable_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which are employee reimbursable or credit card vendor payable.</inlineHelpText>
        <label>Payable Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Vendor_Employee_Payable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unbilled_Expenses__c</fullName>
        <formula>AcctSeed__Billable_Expenses__c - AcctSeed__Billed_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total amount of expenses which have not been billed.</inlineHelpText>
        <label>Unbilled Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unpaid_Expenses__c</fullName>
        <formula>AcctSeed__Payable_Expenses__c - AcctSeed__Paid_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total amount of expenses which have not been paid.</inlineHelpText>
        <label>Unpaid Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unbilled_Expense_Reports</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AcctSeed__Billable_Expenses__c</columns>
        <columns>AcctSeed__Billed_Expenses__c</columns>
        <columns>AcctSeed__Unbilled_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Unbilled_Expenses__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Unbilled Expense Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unpaid_Expense_Reports</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AcctSeed__Payable_Expenses__c</columns>
        <columns>AcctSeed__Paid_Expenses__c</columns>
        <columns>AcctSeed__Unpaid_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Unpaid_Expenses__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Unpaid Expense Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Expense Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Employee_Is_Required</fullName>
        <active>true</active>
        <description>The employee field is required</description>
        <errorConditionFormula>ISBLANK(AcctSeed__Employee__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Employee__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>